ops/deploy/base/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ercotstress
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: http
