ops/deploy/base/api/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: ercotstress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.ercotcongestion.com`)
      kind: Rule
      middlewares:
        - name: api-compress
      services:
        - name: api
          port: 8000
  tls:
    secretName: api-ercotcongestion-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-compress
  namespace: ercotstress
spec:
  compress: {}
---
# HTTP -> HTTPS redirect.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: ercotstress
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-http-redirect
  namespace: ercotstress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.ercotcongestion.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        # Required by IngressRoute schema even when middleware short-circuits.
        - name: api
          port: 8000
